<resources>
    <string name="app_name">Quiz v1</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_register">Registe-se</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <string name="newGame">Contra-Relógio</string>
    <string name="estatisticas">Estatísticas</string>
    <string name="preferencias">Preferências</string>
    <string name="addCategoria">Adicionar Categoria</string>
    <string name="addPergunta">Adicionar Pergunta</string>
    <string name="categoria">Nova categoria</string>
    <string name="txtview_categorias">Escolha uma categoria</string>
    <string name="spin_niveis">Escolha um nivel</string>
    <string name="tv_resposta_correta">Introduza a resposta correta</string>
    <string name="tv_respostas_erradas">Introduza tres respostas erradas!</string>
    <string name="pergunta">Nova Pergunta</string>
    <string name="pede_nova_pergunta">Insira uma pergunta nova</string>
    <string name="new_user">Nome do utilizador</string>
    <string name="new_pass">Password</string>
    <string name="new_pass_confirm">insira novamente a password</string>
    <string name="new_foto">Prima o botao seguinte e sorria!</string>
    <string name="jogar">Jogar!</string>
    <string name="vencedor_Str">----  É UM VENCEDOR!!!  ----</string>
    <string name="responder_Str">Responder</string>
    <string name="seguinte_Str">Próxima pergunta</string>
    <string name="tirar_foto">Camera</string>
    <string name="terminar_Str">Terminar</string>
    <string name="rsp_Sim">Sim</string>
    <string name="rsp_Nao">Não</string>
    <string name="ok">OK</string>
    <string name="rsp_Final">Esta é a sua Resposta final?</string>
    <string name="quemQuerSerMilionario">Quem Quer Ser Milionário</string>
    <string name="lista_vazia">Lista vazia!</string>

    <string name="somOnOff">Ligar/Desligar os sons da aplicação</string>
    <string name="timeout">Duração do contra-relogio</string>
    <string name="currentUser">Utilizador Actual</string>

    <string name="achoQue">Penso que a resposta certa é a </string>
    <string name="rspCerta_e">A resposta certa é a </string>
    <string name="naoSeiRsp">Desculpa. Não faço ideia qual a resposta certa</string>

    <string name="queFazer">O que pretende fazer?</string>
    <string name="bloquearRso">Bloquear resposta dada.</string>
    <string name="pensarMelhor">Pensar melhor.</string>
    <string name="desistir">Não responder.\nDesistir e ganhar %1$s.</string>

        
         
    <string-array name="niveis_array">        
        <item>€1MILHÃO</item>
                
        <item>€500.000</item>
                
        <item>€250.000</item>
                
        <item>€125.000</item>
                
        <item>€64.000</item>
                
        <item>€32.000</item>
                
        <item>€16.000</item>
                
        <item>€8.000</item>
                
        <item>€4.000</item>
                
        <item>€2.000</item>
                
        <item>€1.000</item>
                
        <item>€500</item>
                
        <item>€300</item>
                
        <item>€200</item>
                
        <item>€100</item>
            
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_estatisticas">EstatisticasActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
