<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#3E80B4"
    android:orientation="vertical" >

    <TextView
    android:id="@+id/txt_dia"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:text="@string/queFazer"
    android:textColor="@android:color/white"
    android:textSize="15dp"
    android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#3E80B4"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_bloquear"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="24dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/bloquearRso"
            android:textColor="#5DBCD2"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_pensarM"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:textSize="24dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/pensarMelhor"
            android:textColor="#5DBCD2"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_desistir"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:textSize="24dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:textColor="#5DBCD2"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:background="#3E80B4"
        android:orientation="vertical" />
</LinearLayout>
